adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quae natus error eveniet quo expedita id, tenetur voluptatibus quisquam. Sequi iusto architecto provident repellendus dignissimos odio, pariatur est molestiae aut!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sed culpa ipsa aliquam voluptas veniam, omnis voluptatibus quisquam, assumenda illum, rerum odio. Officia quibusdam voluptas voluptates dolore magni beatae enim.</p>
 </body>
 </html>
